[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scenes/GatoTable.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/TurnSelect.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scripts/GameBoard.gd" type="Script" id=3]
[ext_resource path="res://Scenes/PointsBoard.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/pw_extended.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://Assets/Sounds/party-horn.wav" type="AudioStream" id=6]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 4
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 5 )

[node name="GameBoard" type="Node2D"]
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0.368627, 0.529412, 0.756863, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TurnSelect" parent="." instance=ExtResource( 2 )]

[node name="PointsBoard" parent="." instance=ExtResource( 4 )]

[node name="GatoTable" parent="." instance=ExtResource( 1 )]
margin_left = 262.0
margin_top = 75.0
margin_right = 762.0
margin_bottom = 575.0

[node name="UltimateWinner" type="Label" parent="."]
margin_left = 158.5
margin_top = 258.0
margin_right = 865.5
margin_bottom = 342.0
custom_fonts/font = SubResource( 1 )
text = "Jugador X ha ganado"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WinnerTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="InfoLabel" type="Label" parent="."]
margin_left = 361.5
margin_right = 662.5
margin_bottom = 84.0
custom_fonts/font = SubResource( 1 )
text = "Â¡EMPATE!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DrawTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="WinnerSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PlayAgainButton" type="Button" parent="."]
margin_left = 209.0
margin_top = 500.0
margin_right = 815.0
margin_bottom = 590.0
custom_fonts/font = SubResource( 1 )
text = "VOLVER A JUGAR"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="circle_selected" from="TurnSelect" to="." method="initPlayers"]
[connection signal="cross_selected" from="TurnSelect" to="." method="initPlayers"]
[connection signal="someoneGotThreePoints" from="PointsBoard" to="." method="_on_PointsBoard_someoneGotThreePoints"]
[connection signal="someoneWon" from="GatoTable" to="." method="_on_GatoTable_someoneWon"]
[connection signal="theresDraw" from="GatoTable" to="." method="_on_GatoTable_theresDraw"]
[connection signal="timeout" from="WinnerTimer" to="." method="show_winner"]
[connection signal="timeout" from="DrawTimer" to="." method="_on_DrawTimer_timeout"]
[connection signal="pressed" from="PlayAgainButton" to="." method="_on_PlayAgainButton_pressed"]
